Revert "overlays: Stop document from occupying the extra scrollbar width."
This reverts commit 8654f839b5bdd19198b1ef0a6c50dc121b20ea10.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -227,6 +227,7 @@
     bottom: 0;
     left: 0;
     z-index: 4;
+    width: 100%;
 }
 
 #compose-container {
